[package]
name = "verexp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
glob = "0.3.0"
ark-ec = "0.3.0"
bandersnatch = "0.1.1"
verkle-trie = { path = "deps/rust-verkle/verkle-trie" }
flame = "0.2.2"
flamer = "0.4.0"